# zodiac

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  IDENTITY.md  NEXT.md  README.md  SOUL.md  SYNC.md  USER.md  audit.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-ci.yml  jetson-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
beacon/: build.gradle.kts
beacon/src/main/: AndroidManifest.xml
config/detekt/: detekt.yml
design/: BURN_IN.md  PERFORMANCE.md  UI_CONCEPTS_ZODIAC.md
design/mockups/: concept_A_tactical_grid.html  concept_B_crt_vector.html  concept_C_dropship_console.html  map_concept_1_deorbital_globe.html  map_concept_2_echo_probe.html  map_concept_3_perspective_grid.html  map_concept_4_motion_tracker.html  map_concept_5_instrument_bay.html  map_concepts_index.html
design/mockups/movie-screenshots/: technology-infographic-concept_23-2148479455.avif
design/wireframe_previews/: README.md
design/wireframe_previews/traced/: wireframe_notes.txt
jetson/: DEPLOY.md  DETECTOR.md  HARDWARE.md  README.md  pyproject.toml  requirements.txt
jetson/scripts/: install.sh
jetson/systemd/: zvision.service
jetson/tests/: test_app.py  test_broadcaster.py  test_detector.py  test_geometry.py  test_threat_protocol.py
jetson/zvision/: __init__.py  app.py  broadcaster.py  capture.py  detector.py  fleet_bus.py  geometry.py  threat.py  threat_protocol.py
tasks/: done.md  open.md
(+302 files in other folders)
