[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zvision"
version = "0.1.0"
description = "Zodiac vehicle edge-box (Jetson) threat broadcaster"
requires-python = ">=3.8"
# Core is standard-library only; the camera detector's cv2/numpy are optional.
dependencies = []

[project.optional-dependencies]
camera = ["numpy>=1.24", "opencv-python>=4.8"]

[project.scripts]
zvision = "zvision.app:main"

[tool.setuptools]
packages = ["zvision"]
